{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 292,
  "lineage": "1036714a-b7a7-048b-5ba8-0d195aabb0b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_yang",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e67aff698cb24c1d",
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:instance/i-0fc628799979d3aa1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc628799979d3aa1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yang",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c5f1a80b407d220",
            "private_dns": "ip-10-0-1-28.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.28",
            "public_ip": "13.124.85.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ec286a3e0ddd28b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09dd0e4ce9e7d70de",
            "tags": {
              "Environment": "prod",
              "Name": "EC2-YANG-JENKINS",
              "Network": "public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-043acb174b4c3aff5"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_yang",
            "aws_security_group.sg_yang_jenkins",
            "aws_subnet.sbn_yang_public1",
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_yang_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e67aff698cb24c1d",
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:instance/i-041bce137346fbca3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041bce137346fbca3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yang",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af3ddb7b24c65476",
            "private_dns": "ip-10-0-1-82.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc685a16461c2193",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f96f50e76e9abe6a",
            "tags": {
              "Environment": "prod",
              "Name": "EC2-YANG-WEB",
              "Network": "private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-043acb174b4c3aff5"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_yang",
            "aws_security_group.sg_yang_jenkins",
            "aws_subnet.sbn_yang_private1",
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_yang",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:internet-gateway/igw-0e8afe74dddaebee2",
            "id": "igw-0e8afe74dddaebee2",
            "owner_id": "731049857647",
            "tags": {
              "Name": "IGW-YANG"
            },
            "vpc_id": "vpc-006cfdb3a44ab0ab0"
          },
          "dependencies": [
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_yang_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-042d35944ef7248f2",
            "owner_id": "731049857647",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8afe74dddaebee2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-YANG-PUBLIC"
            },
            "vpc_id": "vpc-006cfdb3a44ab0ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_yang",
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sbn_associations_yang_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e158e41345ca792",
            "route_table_id": "rtb-042d35944ef7248f2",
            "subnet_id": "subnet-0f96f50e76e9abe6a"
          },
          "dependencies": [
            "aws_route_table.rt_yang_public",
            "aws_subnet.sbn_yang_private1",
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sbn_associations_yang_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de591f4da0726a28",
            "route_table_id": "rtb-042d35944ef7248f2",
            "subnet_id": "subnet-09dd0e4ce9e7d70de"
          },
          "dependencies": [
            "aws_internet_gateway.igw_yang",
            "aws_route_table.rt_yang_public",
            "aws_subnet.sbn_yang_public1",
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sbn_associations_yang_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afcb8c0e0139b966",
            "route_table_id": "rtb-042d35944ef7248f2",
            "subnet_id": "subnet-00cddd67dbc73b5b2"
          },
          "dependencies": [
            "aws_internet_gateway.igw_yang",
            "aws_route_table.rt_yang_public",
            "aws_subnet.sbn_yang_public2",
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_yang_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:security-group/sg-043acb174b4c3aff5",
            "description": "Allow SSH Access from my pc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043acb174b4c3aff5",
            "ingress": [
              {
                "cidr_blocks": [
                  "59.9.142.0/24"
                ],
                "description": "Ping test from My IP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "59.9.142.0/24"
                ],
                "description": "SSH Access from My IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "59.9.142.0/24"
                ],
                "description": "Web Access from My IP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "SG-YANG-JENKINS",
            "name_prefix": "",
            "owner_id": "731049857647",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-YANG-JENKINS"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cfdb3a44ab0ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_yang_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:security-group/sg-057c4aabb069f3ff9",
            "description": "Allow SSH Access from my pc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057c4aabb069f3ff9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "SSH Access from My IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "59.9.142.0/24"
                ],
                "description": "Ping test from My IP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "59.9.142.0/24"
                ],
                "description": "SSH Access from My IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "59.9.142.0/24"
                ],
                "description": "Web Access from My IP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "SG-YANG-WEB",
            "name_prefix": "",
            "owner_id": "731049857647",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-YANG-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cfdb3a44ab0ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn_yang_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:subnet/subnet-0f96f50e76e9abe6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.64/27",
            "id": "subnet-0f96f50e76e9abe6a",
            "map_public_ip_on_launch": false,
            "owner_id": "731049857647",
            "tags": {
              "Name": "SBN-YANG-PRIVATE1"
            },
            "vpc_id": "vpc-006cfdb3a44ab0ab0"
          },
          "dependencies": [
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn_yang_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:subnet/subnet-0245a52e1e2e55383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.96/27",
            "id": "subnet-0245a52e1e2e55383",
            "map_public_ip_on_launch": false,
            "owner_id": "731049857647",
            "tags": {
              "Name": "SBN-YANG-PRIVATE2"
            },
            "vpc_id": "vpc-006cfdb3a44ab0ab0"
          },
          "dependencies": [
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn_yang_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:subnet/subnet-09dd0e4ce9e7d70de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/27",
            "id": "subnet-09dd0e4ce9e7d70de",
            "map_public_ip_on_launch": false,
            "owner_id": "731049857647",
            "tags": {
              "Name": "SBN-YANG-PUBLIC1"
            },
            "vpc_id": "vpc-006cfdb3a44ab0ab0"
          },
          "dependencies": [
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn_yang_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:subnet/subnet-00cddd67dbc73b5b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.32/27",
            "id": "subnet-00cddd67dbc73b5b2",
            "map_public_ip_on_launch": false,
            "owner_id": "731049857647",
            "tags": {
              "Name": "SBN-YANG-PUBLIC2"
            },
            "vpc_id": "vpc-006cfdb3a44ab0ab0"
          },
          "dependencies": [
            "aws_vpc.vpc_yang"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_yang",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:731049857647:vpc/vpc-006cfdb3a44ab0ab0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-002e6b5519eac18da",
            "default_route_table_id": "rtb-042d35944ef7248f2",
            "default_security_group_id": "sg-058a3226251a61523",
            "dhcp_options_id": "dopt-9c8f5bf7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-006cfdb3a44ab0ab0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-042d35944ef7248f2",
            "owner_id": "731049857647",
            "tags": {
              "Name": "VPC-YANG"
            }
          }
        }
      ]
    }
  ]
}